--- a/index.html
+++ b/index.html
@@ -11,7 +11,37 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <object data="images/logo.svg" type="image/svg+xml" width="275px" class="pt-3" />
+      <h1>Placeholder Title</h1>
+    </div>
+
+    <!--- Pricing Table -->
+    <div class="container">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Charge</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">Less than 30 mins</th>
+            <td>$50</td>
+          </tr>
+          <tr>
+            <th scope="row">First hour</th>
+            <td>$95</td>
+          </tr>
+          <tr>
+            <th scope="row">Additional hours</th>
+            <td>$75</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
